--- a/docs/estilos/estilos.css
+++ b/docs/estilos/estilos.css
@@ -1,8 +1,9 @@
-main {
+main{
     border: 2px solid black;
     height: 660px;
     width: 1100px;
     margin: auto;
+    
 }
 
 header{
@@ -15,6 +16,7 @@ nav{
     border: 2px solid black;
     height: 70px;
     margin: 3px 0px 3px 0px;
+    
 }
 
 section{
@@ -40,6 +42,7 @@ article{
     height: 139px;
     width: 680px;
     float: right;
+    text-align: center;
 }
 
 article{
@@ -59,14 +62,20 @@ article{
 nav ul li{
     border: 2px solid black;
     width: 100px;
-    display: inline-block
-    ;
+    display: inline-block;
     margin-right: 20px;
     font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
+
+nav ul{
+    display: flex;
+    justify-content: space-around
 }
 
 header img{
-    width: 100px;
+    width: 400px;
     height: 100px;
-    margin: 5px;
+    margin: 10px;
+    text-align: center;
 }   
