--- a/docs/estilos/flex.css
+++ b/docs/estilos/flex.css
@@ -1,9 +1,12 @@
 #contenedor{
     border: 1px solid black;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .item{
     border: 1px solid black;
     width: 100px;
     height: 100px;
+    margin: 5px;
 }
